--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,8 @@
 
 
 body{
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
   max-width: 700px;
   margin: 0 auto; /* Để căn giữa theo chiều ngang */
   box-sizing: border-box; /* Đảm bảo padding không làm thay đổi kích thước tổng */
